--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coding Quiz</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <a href="./highscore.html">High Score Leaderboard</a>
+        </div>
+        <div>
+            <h3>Timer</h3>
+        </div>
+    </header>
+    <section>
+        <h2>Quiz Coding Challenege</h2>
+
+        <p>Try to answer the following code related questions within the time limit. </br>
+            Keep in mind that incorrect answers will penalize your score/time </br>
+            by ten seconds!
+        </p>
+
+        <button class="btn">Start Quiz</button>
+    </section>
+
 </body>
 </html>
