--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Coding Quiz</title>
 </head>
 <body>
     <header>
         <div>
-            <a href="./highscore.html">High Score Leaderboard</a>
+            <a href="./highscore.html">View High Scores</a>
         </div>
         <div>
             <h3>Timer</h3>
@@ -26,5 +27,6 @@
         <button class="btn">Start Quiz</button>
     </section>
 
+    <script scr=".assets/js/script.js"></script>
 </body>
 </html>
