--- a/index.html
+++ b/index.html
@@ -16,17 +16,25 @@
             <h3>Timer</h3>
         </div>
     </header>
-    <section>
-        <h2>Quiz Coding Challenege</h2>
+    <div id="intro">
+        <h2 id="title">Quiz Coding Challenege</h2>
 
         <p>Try to answer the following code related questions within the time limit. </br>
             Keep in mind that incorrect answers will penalize your score/time </br>
             by ten seconds!
         </p>
 
-        <button class="btn">Start Quiz</button>
-    </section>
+        <button class="btn" id="start-quiz">Start Quiz</button>
+    </div>
 
-    <script scr=".assets/js/script.js"></script>
+    <div id="quiz">
+        <h2 id="questions"></h2>
+    </div>
+
+    <div id="quizComplete">
+    </div> 
+
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
