--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="./highscore.html">View High Scores</a>
         </div>
         <div>
-            <h3>Timer</h3>
+            <h3 id="timer">r</h3>
         </div>
     </header>
     <div id="intro">
