added initials and enhancemnts to timer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     </div>
 
     <div id="quizComplete">
+        <p id="final-score"></p>
+    
+        <form action="./highscore.html" name = "form" method="post" id="initial-form">
+            <label class="text">Enter Your Initials:</label>
+            <input required id="initials" placeholder="Enter Your Initials" type="text" name="fname">
+            <button class="btn"  type="submit" id="score-button" type="submit" name ="initials" >
+                <a href="./highscore.html">Submit</a></button>
+          </form>
     </div> 
 
 
